load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

ts_project(
    name = "compile",
    srcs = glob(["*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "module": "commonjs",
            "target": "ESNext",
            "esModuleInterop": True,
        },
    },
    deps = [
        "@npm//@types/node",
        "@npm//apollo-server",
    ],
)

nodejs_binary(
    name = "server",
    data = [
        ":compile",
    ],
    entry_point = ":main.ts",
)